--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.2.1",
     "immer": "^9.0.16",
